# CMakeProject1

./: CMakeLists.txt  CMakeProject1.cpp  CMakeProject1.h  README.md  main.cpp
data/B_surface/: 123.txt  Order.txt  SurfCnt.txt  SurfKnot.txt  SurfKnotU.txt  SurfKnotV.txt  相关变量.txt
data/IGES/: 1.IGS  2.IGS  3.IGS  4.IGS  5.igs  CAM1.igs  CAM2.igs  temp.IGS
data/temp/: 123.txt  1234.IGS  1234.txt  CAM0.txt  CAM01.txt  CAM1.txt  b_surface.txt
data/txt/: 0_ruled_surface.txt  2_b_surface.txt
src/: sisl_tool.cpp  sisl_tool.h  write_iges.cpp  write_iges.h
